<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/cod"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/descripcionP"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_codigo" />

    <EditText
        android:id="@+id/txt_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/precioP"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:onClick="Registrar"
        android:text="@string/RegistrarP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="254dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:onClick="Buscar"
        android:text="@string/buscarP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrar" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:onClick="Modifica"
        android:text="@string/modificarp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:onClick="Eliminar"
        android:text="@string/eliminarp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />
</androidx.constraintlayout.widget.ConstraintLayout>